macro-template/tests/ui/err/unknown_range_method.stderr
error: unknown range input method
 --> tests/ui/err/unknown_range_method.rs:5:26
  |
5 |         for N in (0..=3).step_by() {
  |                          ^^^^^^^
